--- a/index.jade
+++ b/index.jade
@@ -7,23 +7,27 @@ html(lang="en")
 
 		section#landing.flex.align-ver-center
 			.container
-				h1.title Welcome to Uneed!
-				h2.sub-title 
-					| Lorem ipsum dolor sit amet. Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.
+				h1.title Uneed
+				h2.sub-title Where quality is trend and digital progress an outcome
+				a.learn-more(href="/services")
+					button.white(role="button") Learn More
 			.scroll-down
 
 		section#info.flex.align-ver-center
 			.container
-				h1.title.dark What are you looking for?
-				h2.sub-title
-					| Uneed has a variety of pricing models and is always glad to meet your specific needs by adjustingt the model that suits both the company and client. Inspired by latest technologies, supported by self-motivated talents with a clear vision to expand your business. 
+				h1.title.dark Our Services
+				h2.sub-title We provide 3 options to help your business maintain, extend and acquire <b>qualitative IT resources</b>
 
 		section#services.flex.align-ver-center
 			.container.service.flex.flex-column.align-ver-center
 				img.service-image(src="/images/gif/outsource.gif" width="100" height="100")
 				.service-description
 					h1.title.dark.service-title Development of the Project
-					h2.sub-title.service-subtitle Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation. ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+					h2.sub-title.service-subtitle recommended for
+					ul.service-list
+						li short term projects
+						li fixed cost/time or budget
+						li small to middle scale projects
 					a(href="/services/outsource")
 						button(role="button") Get more info
 
@@ -31,7 +35,10 @@ html(lang="en")
 				img.service-image(src="/images/gif/outstaff.gif" width="100" height="100")
 				.service-description
 					h1.title.dark.service-title Dedicated Development Team
-					h2.sub-title.service-subtitle Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation. ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+					h2.sub-title.service-subtitle recommended for
+					ul.service-list
+						li medium/large scale projects
+						li full-cycle development and maintenance
 					a(href="/services/outstaff")
 						button(role="button") Get more info
 
@@ -39,26 +46,27 @@ html(lang="en")
 				img.service-image(src="/images/gif/relocation.gif" width="100" height="100")
 				.service-description
 					h1.title.dark.service-title Developer for relocation
-					h2.sub-title.service-subtitle Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation. ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+					h2.sub-title.service-subtitle recommended for
+					ul.service-list
+						li building/extending your IT department
+						li limited recruitment capabilities
 					a(href="/services/relocation")
 						button(role="button") Get more info
 
 		section#about-services.flex.align-ver-center
 			.container
-				| If you don’t know what to choose, learn more about each of this options and its difference 
-				a(href="/services") here
-				| .
+				| Learn more about each of these options and their difference 
+				a.underlined(href="/services") HERE
 		section#guarantee.flex.align-ver-center
 			.container
-				h1.title We guarantee
-				h2.sub-title Now you can give secure access to you’re community from anywhere at anytime. Your future visitor will receive a unique Sequr pin to access your community. You can specify if you want it to be send via text-message or email.
+				h1.title We provide our customers with
 				.features-container
 					.feature
 						include icons/1-quality
-						span Quality is first of all
+						span Outstanding quality
 					.feature
 						include icons/2-english
-						span Specialist with good English
+						span Specialist with proficient technical and language skills
 					.feature
 						include icons/3-office
 						span Our office availabity for 24/7
@@ -70,15 +78,14 @@ html(lang="en")
 						span Seniors for seniors
 					.feature
 						include icons/6-risk
-						span Risk free cooperation
+						span Long-term partnership
 
 		.gradient
 
 		section#portfolio
 			.container
-				h1.title.dark What can we create?
-				h2.sub-title Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua enim ad minim veniam. 
+				h1.title.dark Our Expertise
+				h2.sub-title Our team is comprised of devoted professionals who have expertise in multiple areas. We build web products that work and last, advance your customer journey, target and keep your customers in the loop. 
 
 		include parts/footer
-		script(type="text/javascript" src="/js/index.min.js")
 
