--- a/services/index.jade
+++ b/services/index.jade
@@ -99,7 +99,7 @@ html(lang="en")
 							a(href="/services/outsource")
 								button(role="button") Get more info
 						.slide-option.footer(data-tappable="true")
-							a(href="#") Get Started Now
+							a(href="/contact-us") Get Started Now
 					.slide
 						.slide-header-container
 							.slide-left.flex.align-hor-center.align-ver-center
@@ -155,7 +155,7 @@ html(lang="en")
 							a(href="/services/outstaff")
 								button(role="button") Get more info
 						.slide-option.footer(data-tappable="true")
-							a(href="#") Get Started Now
+							a(href="/contact-us") Get Started Now
 					.slide
 						.slide-header-container
 							.slide-left.flex.align-hor-center.align-ver-center
@@ -211,7 +211,7 @@ html(lang="en")
 							a(href="/services/relocation")
 								button(role="button") Get more info
 						.slide-option.footer(data-tappable="true")
-							a(href="#") Get Started Now
+							a(href="/contact-us") Get Started Now
 
 		section#service-description
 			.container
