--- a/contact-us/index.jade
+++ b/contact-us/index.jade
@@ -18,7 +18,7 @@ html(lang="en")
 							input#user_name(type="text" placeholder="Name" name="user_name" required)
 							input#user_email(type="email" placeholder="Email" name="user_email" required)
 							textarea#user_message(name="user_message" rows="5" placeholder="Message")
-						button(type="submit") Send Email
+						button.black(type="submit") Send Email
 
 				.contact-info
 					.details
