--- a/styl/index.styl
+++ b/styl/index.styl
@@ -18,6 +18,9 @@
 		background-size: cover
 		background-position: 50%
 		background-repeat: no-repeat
+		text-align: center
+		.sub-title
+			margin-bottom: 2rem
 		.scroll-down
 			position: absolute
 			bottom: 0
@@ -55,10 +58,18 @@
 	#services
 		flex-direction: column
 		.container
+			width: 100%
 			padding-top: 3rem
 			padding-bottom: 3rem
 			background-color: #f3f8ff
 			border: solid 1px #e3eaf3
+		.service-list
+			text-align: left
+			font-size: 16px
+			font-weight: 400
+			line-height: 1.5
+			color: #8492af
+			margin-bottom: 2rem
 		.service-description
 			display: flex
 			flex-direction: column
@@ -93,7 +104,7 @@
 			flex-direction: row
 			justify-content: center
 			.container.service
-				width: 19rem
+				width: 20rem
 				margin: 0 2rem
 				flex-direction: column
 				.service-description
@@ -122,6 +133,8 @@
 			line-height: 1.33
 		@media screen and (min-width: $screenMedium)
 			margin-top: 2rem
+			.container
+				width: 30rem
 
 	#guarantee
 		padding: 2rem 0
