--- a/portfolio/index.jade
+++ b/portfolio/index.jade
@@ -12,6 +12,7 @@ html(lang="en")
 
 		section#switcher
 			#switch-left
+				include ../icons/left-arrow
 			a.active(href="#")
 				h2.sub-title All
 			a(href="#")
@@ -21,6 +22,7 @@ html(lang="en")
 			a(href="#")
 				h2.sub-title Product Design
 			#switch-right
+				include ../icons/left-arrow
 
 		section#projects
 			.container
