--- a/services/index.jade
+++ b/services/index.jade
@@ -42,7 +42,7 @@ html(lang="en")
 				.title-option
 					.option-name Quality
 				.title-option.last
-			.services-slides.swipeshow
+			.services-slides.swipeshow.autoheight
 				.slides
 					.slide
 						.slide-header-container
