--- a/services/outstaff/index.jade
+++ b/services/outstaff/index.jade
@@ -9,6 +9,7 @@ html(lang="en")
 
 		section#switcher
 			#switch-left
+				include ../../icons/left-arrow
 			a(href="/services/outsource")
 				h2.sub-title Development of the project
 			a(href="/services/outstaff").active
@@ -16,6 +17,7 @@ html(lang="en")
 			a(href="/services/relocation")
 				h2.sub-title Developer for relocation
 			#switch-right
+				include ../../icons/left-arrow
 
 		section#description
 			.container
