--- a/styl/general.styl
+++ b/styl/general.styl
@@ -284,6 +284,38 @@ header
 				background-image: url('/images/svg/logo/big/text-logo.svg')
 				background-repeat: no-repeat
 
+.swipeshow.autoheight
+	height: auto
+	.slide
+		height: auto
+		position: static
+	.slides
+		height: 100%
+		position: relative
+		display: flex
+		flex-direction: row
+		flex-wrap: nowrap
+		
+	.dots
+		height: 4rem
+		width: 100%
+		display: flex
+		justify-content: center
+		align-items: center
+		.dot-item
+			border: none
+			width: 10px
+			height: 10px
+			margin: 0 0.5rem
+			background-color: #f3f8ff
+			border: solid 1px #e3eaf3
+			border-radius: 50%
+			padding: 0
+			&.active
+				background-color: #8492af
+			&:before
+				content: none
+
 #switcher
 	margin: 0 1rem
 	border-bottom: 1px solid #e4e4f1
@@ -293,7 +325,13 @@ header
 	#switch-left, #switch-right
 		height: 2rem
 		width: 2rem
-		background: black
+		display: flex
+		justify-content: center
+		align-items: center
+		cursor: pointer
+	#switch-right
+		svg
+			transform: rotate(180deg)
 	h2
 		width: auto
 		font-size: 13px
