--- a/services/index.jade
+++ b/services/index.jade
@@ -49,7 +49,8 @@ html(lang="en")
 							.slide-left.flex.align-hor-center.align-ver-center
 								include ../icons/arrow-go
 							.slide-header
-								img.service-image(src="/images/gif/outsource.gif" width="100" height="100")
+								.service-image
+									include ../icons/outsource
 								p Development of the Project
 							.slide-right.flex.align-hor-center.align-ver-center
 								include ../icons/arrow-go
@@ -105,7 +106,8 @@ html(lang="en")
 							.slide-left.flex.align-hor-center.align-ver-center
 								include ../icons/arrow-go
 							.slide-header
-								img.service-image(src="/images/gif/outstaff.gif" width="100" height="100")
+								.service-image
+									include ../icons/outstaff
 								p Dedicated Development Team
 							.slide-right.flex.align-hor-center.align-ver-center
 								include ../icons/arrow-go
@@ -161,7 +163,8 @@ html(lang="en")
 							.slide-left.flex.align-hor-center.align-ver-center
 								include ../icons/arrow-go
 							.slide-header
-								img.service-image(src="/images/gif/relocation.gif" width="100" height="100")
+								.service-image
+									include ../icons/relocation
 								p Developer for relocation
 							.slide-right.flex.align-hor-center.align-ver-center
 								include ../icons/arrow-go
