--- a/styl/general.styl
+++ b/styl/general.styl
@@ -350,10 +350,10 @@ header
 					height: 2px
 					background-color: #8492af
 					position: absolute
-					left: 0
-					right: 0
 					bottom: -12px
 					margin: auto
+					left: 50%;
+					transform: translate(-50%, 0);
 	@media screen and (min-width: $screenSmall)
 		justify-content: center
 		width: 722px
