--- a/styl/index.styl
+++ b/styl/index.styl
@@ -19,6 +19,7 @@
 		background-position: 50%
 		background-repeat: no-repeat
 		text-align: center
+		min-height: 500px;
 		.sub-title
 			margin-bottom: 2rem
 		.scroll-down
@@ -180,13 +181,15 @@
 
 	#portfolio
 		padding: 2rem 0 4rem 0
+		text-align: center
 		#switcher
 			margin: 2rem auto
+		.swipeshow-active .slides
+			cursor: default
 		.portfolio-slides
 			width: 100%
 			.slide
 				width: 100%
-				text-align: center
 				.portfolio-image
 					height: 165px
 					background-size: cover
