--- a/parts/head.jade
+++ b/parts/head.jade
@@ -5,7 +5,14 @@ head
 	meta(name="description" content="Uneed Web - Software Development Company")
 	meta(name="keywords" content="software, development, company, outsource, outstaff")
 	meta(name="author" content="Kirill Buga")
+	meta(name="apple-mobile-web-app-title" content="uneedweb")
+	meta(name="application-name" content="uneedweb")
+	meta(name="theme-color" content="#ffffff")
 	title Uneed Web - Software Development Company
 	link(href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,700" rel="stylesheet")
-	link(rel="shortcut icon" href="/favicon.ico")
 	link(href="/css/index.css" rel="stylesheet")
+	link(rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png")
+	link(rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png")
+	link(rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png")
+	link(rel="manifest" href="/manifest.json")
+	link(rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5")
