--- a/styl/contact-us.styl
+++ b/styl/contact-us.styl
@@ -1,3 +1,16 @@
+#contact-us-result-page
+	display: flex
+	flex-direction: column
+	#contact-result
+		flex: 1
+		padding-top: 7rem
+		padding-bottom: 3rem
+		@media screen and (min-width: $screenSmall)
+			padding-top: 9rem
+		@media screen and (min-width: $screenMedium)
+			padding-top: 11rem
+			padding-bottom: 5rem
+
 #contact-us-page
 	header
 		width: 100%
@@ -15,17 +28,9 @@
 		padding-top: 7rem
 		padding-bottom: 1rem
 		@media screen and (min-width: $screenMedium)
-			h1.title
-				font-size: 48px
-				font-weight: 100
-				color: #0e1a35
-				margin-bottom: 0
 			h2.sub-title
-				font-size: 18px
-				line-height: 1.33
 				text-align: center
 				margin-bottom: 2rem
-				color: #8492af
 		
 	#contact-body
 		.contact-form
@@ -102,7 +107,7 @@
 					margin-bottom: 2rem
 				.contacts
 					margin: 0
-	
+
 	#contact-footer
 		padding: 3rem 1rem 5rem 1rem
 		border-radius: 4px
