--- a/index.jade
+++ b/index.jade
@@ -9,7 +9,7 @@ html(lang="en")
 			.container
 				//- h1.title(class="typewrite" data-period="1000" data-type='[ "Web Development Company", "Software Development Company" ]')
 					span.wrap
-				h1.title Web Development Company
+				h1.title Uneed Web
 				h2.sub-title Where quality is trend and digital progress an outcome
 				a.learn-more(href="/services")
 					button.white(role="button") Learn More
@@ -77,7 +77,7 @@ html(lang="en")
 						span Personal meetings and direct comunication
 					.feature
 						include icons/5-seniors
-						span Seniors for seniors
+						span Seniors for Seniors
 					.feature
 						include icons/6-risk
 						span Long-term partnership
@@ -146,7 +146,7 @@ html(lang="en")
 
 					a(href="/portfolio")
 						button(role="button")
-							span Get more info
+							span Get in touch with us
 							span.icon
 								include icons/arrow-go
 
