--- a/services/index.jade
+++ b/services/index.jade
@@ -8,7 +8,7 @@ html(lang="en")
 		section#description
 			.container
 				h1.title.dark Services
-				h2.sub-title We believe that project is successful when all the needs are met correctly and the project is set smoothly. Before making the table below, we did a market-research and basing on our experience we came to conclusion that the most wining for all sides are the following 3 options. 
+				h2.sub-title Based on scope and duration of a project the following comparison table of 3 services is provided.
 
 		section#service-table
 			.services-titles
@@ -16,29 +16,29 @@ html(lang="en")
 				.title-option
 					.option-name Onsite Developer/Team
 				.title-option
-					.option-name Working Space/Equipment for team members
+					.option-name Workspace/Equipment
 				.title-option
 					.option-name PM
 				.title-option
 					.option-name QA
 				.title-option
-					.option-name Developer/Team engage ONLY with your project
+					.option-name Developer/Team solely engaged with your project
 				.title-option
 					.option-name Fast Start of the Project
 				.title-option
 					.option-name PM methodology
 				.title-option
-					.option-name Instant feedback
+					.option-name Instant Feedback
 				.title-option
-					.option-name Cardidates interview
+					.option-name Cardidates Interview
 				.title-option
-					.option-name Client’s engagement in the project
+					.option-name Continuous Client Engagement
 				.title-option
 					.option-name Estimates
 				.title-option
-					.option-name Support
+					.option-name After Release Support
 				.title-option
-					.option-name Charges
+					.option-name Billing
 				.title-option
 					.option-name Quality
 				.title-option.last
@@ -58,7 +58,7 @@ html(lang="en")
 							.option-name Onsite Developer/Team
 							.option-checkbox
 						.slide-option(data-tappable="true")
-							.option-name Working Space/Equipment for team members
+							.option-name Workspace/Equipment
 							.option-checkbox.checked
 						.slide-option(data-tappable="true")
 							.option-name PM
@@ -67,7 +67,7 @@ html(lang="en")
 							.option-name QA
 							.option-checkbox.checked
 						.slide-option(data-tappable="true")
-							.option-name Developer/Team engage ONLY with your project
+							.option-name Developer/Team solely engaged with your project
 							.option-value On Demand
 						.slide-option(data-tappable="true")
 							.option-name Fast Start of the Project
@@ -76,22 +76,22 @@ html(lang="en")
 							.option-name PM methodology
 							.option-checkbox.checked
 						.slide-option(data-tappable="true")
-							.option-name Instant feedback
+							.option-name Instant Feedback
 							.option-checkbox.checked
 						.slide-option(data-tappable="true")
-							.option-name Cardidates interview
+							.option-name Cardidates Interview
 							.option-checkbox.checked
 						.slide-option(data-tappable="true")
-							.option-name Client’s engagement in the project
+							.option-name Continuous Client Engagement
 							.option-value On Demand
 						.slide-option(data-tappable="true")
 							.option-name Estimates
 							.option-checkbox.checked
 						.slide-option(data-tappable="true")
-							.option-name Support
+							.option-name After Release Support
 							.option-checkbox.checked
 						.slide-option(data-tappable="true")
-							.option-name Charges
+							.option-name Billing
 							.option-value Monthly Payment
 						.slide-option(data-tappable="true")
 							.option-name Quality
@@ -115,7 +115,7 @@ html(lang="en")
 							.option-name Onsite Developer/Team
 							.option-checkbox
 						.slide-option(data-tappable="true")
-							.option-name Working Space/Equipment for team members
+							.option-name Workspace/Equipment
 							.option-checkbox
 						.slide-option(data-tappable="true")
 							.option-name PM
@@ -124,7 +124,7 @@ html(lang="en")
 							.option-name QA
 							.option-value On Demand
 						.slide-option(data-tappable="true")
-							.option-name Developer/Team engage ONLY with your project
+							.option-name Developer/Team solely engaged with your project
 							.option-checkbox.checked
 						.slide-option(data-tappable="true")
 							.option-name Fast Start of the Project
@@ -133,22 +133,22 @@ html(lang="en")
 							.option-name PM methodology
 							.option-value On Demand
 						.slide-option(data-tappable="true")
-							.option-name Instant feedback
+							.option-name Instant Feedback
 							.option-checkbox.checked
 						.slide-option(data-tappable="true")
-							.option-name Cardidates interview
+							.option-name Cardidates Interview
 							.option-checkbox.checked
 						.slide-option(data-tappable="true")
-							.option-name Client’s engagement in the project
+							.option-name Continuous Client Engagement
 							.option-checkbox.checked
 						.slide-option(data-tappable="true")
 							.option-name Estimates
 							.option-checkbox.checked
 						.slide-option(data-tappable="true")
-							.option-name Support
+							.option-name After Release Support
 							.option-value On Demand
 						.slide-option(data-tappable="true")
-							.option-name Charges
+							.option-name Billing
 							.option-value Monthly Rates
 						.slide-option(data-tappable="true")
 							.option-name Quality
@@ -172,7 +172,7 @@ html(lang="en")
 							.option-name Onsite Developer/Team
 							.option-checkbox.checked
 						.slide-option(data-tappable="true")
-							.option-name Working Space/Equipment for team members
+							.option-name Workspace/Equipment
 							.option-checkbox
 						.slide-option(data-tappable="true")
 							.option-name PM
@@ -181,7 +181,7 @@ html(lang="en")
 							.option-name QA
 							.option-checkbox
 						.slide-option(data-tappable="true")
-							.option-name Developer/Team engage ONLY with your project
+							.option-name Developer/Team solely engaged with your project
 							.option-checkbox.checked
 						.slide-option(data-tappable="true")
 							.option-name Fast Start of the Project
@@ -190,22 +190,22 @@ html(lang="en")
 							.option-name PM methodology
 							.option-value On Demand
 						.slide-option(data-tappable="true")
-							.option-name Instant feedback
+							.option-name Instant Feedback
 							.option-checkbox.checked
 						.slide-option(data-tappable="true")
-							.option-name Cardidates interview
+							.option-name Cardidates Interview
 							.option-checkbox.checked
 						.slide-option(data-tappable="true")
-							.option-name Client’s engagement in the project
+							.option-name Continuous Client Engagement
 							.option-checkbox.checked
 						.slide-option(data-tappable="true")
 							.option-name Estimates
 							.option-checkbox.checked
 						.slide-option(data-tappable="true")
-							.option-name Support
+							.option-name After Release Support
 							.option-checkbox
 						.slide-option(data-tappable="true")
-							.option-name Charges
+							.option-name Billing
 							.option-value %
 						.slide-option(data-tappable="true")
 							.option-name Quality
