--- a/services/outsource/index.jade
+++ b/services/outsource/index.jade
@@ -24,7 +24,9 @@ html(lang="en")
 				.service-image.outsource
 				h1.title.dark Development of the project
 
-				h2.sub-title We tend to think that model of Decimated Development Team is one of the winning ones for the company which works on development of its own product and needs high-quality resources with good efficiency level at the same time with optimised budget. With this model you will have your dedicated employee or team, who works liked any other of your team members only remotely. This way you don’t have to take care of any organisational details like HR, office, technical equipment, but you receive the same result as from onsite team. 
+				h2.sub-title Aimed for businesses that have a defined objective for the project, constrained in time or budget and do not consider establishing an on-going software development team. With offloading your project to us you will optimize work and save the best in-house staff for more valuable tasks. 
+
+				h2.sub-title For long-term projects (6+ months) we suggest you consider the Dedicated Development Team model.
 
 				h2.sub-title.result You do 5%, we do rest 95% for you. 
 
@@ -38,16 +40,15 @@ html(lang="en")
 			.container
 				h1.title You do
 				ul.customer-workflow
-					li.color-1 Provide Technical Requirements for candidate 
-					li.color-2 Chat and make final decision
+					li.color-1 Provide technical requirements
+					li.color-2 Approve estimate and project offer
 				h1.title We do
 				ul.uneed-workflow
-					li.color-3 Search the internal team and the market for the right candidate 
-					li.color-4 HR-team interviews to check personal skills and level of English
-					li.color-5 Our best technical professionals interviews to check development skills 
-					li.color-6 Arrange the meeting with you and your team 
-					li.color-7 We set up start of the work and provide office space and technical equipment 
-					li.color-8 We deal with all every-day issues and questions with your team-member
+					li.color-3 Analyze, gather and offer the project estimate (timeline and budget)
+					li.color-4 Submit project offer, pricing and schedule
+					li.color-5 Set up a team and start a project
+					li.color-6 Test and launch of a project
+					li.color-7 In case needed, continued project support
 
 		section#workflow.desktop
 			.container
@@ -58,42 +59,37 @@ html(lang="en")
 					.workflow-item
 						.ball
 						.arrow
-						.text Provide Technical Requirements for candidate 
+						.text Provide technical requirements
 				.workflow-row.left.color-2
 					.workflow-item
 						.ball
 						.arrow
-						.text Search the internal team and the market for the right candidate 
+						.text Analyze, gather and offer the project estimate (timeline and budget)
 				.workflow-row.left.color-3
 					.workflow-item
 						.ball
 						.arrow
-						.text Search the internal team and the market for the right candidate 
-				.workflow-row.left.color-4
+						.text Submit project offer, pricing and schedule
+				.workflow-row.right.color-4
 					.workflow-item
 						.ball
 						.arrow
-						.text HR-team interviews to check personal skills and level of English
+						.text Approve estimate and project offer
 				.workflow-row.left.color-5
 					.workflow-item
 						.ball
 						.arrow
-						.text Our best technical professionals interviews to check development skills 
-				.workflow-row.right.color-6
+						.text Set up a team and start a project
+				.workflow-row.left.color-6
 					.workflow-item
 						.ball
 						.arrow
-						.text Chat and make final decision
+						.text Test and launch of a project
 				.workflow-row.left.color-7
 					.workflow-item
 						.ball
 						.arrow
-						.text We set up start of the work and provide office space and technical equipment 
-				.workflow-row.left.color-8
-					.workflow-item
-						.ball
-						.arrow
-						.text We deal with all every-day issues and questions with your team-member
+						.text In case needed, continued project support
 
 		section#result
 			h1.title.dark Result
