--- a/services/outstaff/index.jade
+++ b/services/outstaff/index.jade
@@ -24,7 +24,8 @@ html(lang="en")
 				.service-image.outstaff
 				h1.title.dark Dedicated Development Team
 
-				h2.sub-title We tend to think that model of Decimated Development Team is one of the winning ones for the company which works on development of its own product and needs high-quality resources with good efficiency level at the same time with optimised budget. With this model you will have your dedicated employee or team, who works liked any other of your team members only remotely. This way you don’t have to take care of any organisational details like HR, office, technical equipment, but you receive the same result as from onsite team. 
+				h2.sub-title A cost-effective model for businesses that require high-quality, efficient resources within an optimized time frame. <br/> You get control over the selection and management of your dedicated IT team, with no unexpected costs, flexible workload and scope. While you focus on your projects, we will take care of all time-consuming tasks and ensure clear communication between your in-house team and offshore team.
+
 
 				h2.sub-title.result You do 5%, we do rest 95% for you. 
 
@@ -38,16 +39,18 @@ html(lang="en")
 			.container
 				h1.title You do
 				ul.customer-workflow
-					li.color-1 Provide Technical Requirements for candidate 
-					li.color-2 Chat and make final decision
+					li.color-1 Provide the number and the skillset of required IT experts
+					li.color-2 Evaluate and approve team
+					li.color-3 Assign project tasks
+					li.color-4 Renew the contract
 				h1.title We do
 				ul.uneed-workflow
-					li.color-3 Search the internal team and the market for the right candidate 
-					li.color-4 HR-team interviews to check personal skills and level of English
-					li.color-5 Our best technical professionals interviews to check development skills 
-					li.color-6 Arrange the meeting with you and your team 
-					li.color-7 We set up start of the work and provide office space and technical equipment 
-					li.color-8 We deal with all every-day issues and questions with your team-member
+					li.color-4 Search for candidates
+					li.color-5 Conduct recruitment process to check candidates’ personal skills and language proficiency
+					li.color-6 Conduct technical interviews
+					li.color-6 Suggest candidates and schedule an interview with your team
+					li.color-7 Provide workspace, facilities and technical equipment
+					li.color-8 Take care of daily administrative things
 
 		section#workflow.desktop
 			.container
@@ -58,42 +61,52 @@ html(lang="en")
 					.workflow-item
 						.ball
 						.arrow
-						.text Provide Technical Requirements for candidate 
+						.text Provide the number and the skillset of required IT experts
 				.workflow-row.left.color-2
 					.workflow-item
 						.ball
 						.arrow
-						.text Search the internal team and the market for the right candidate 
+						.text Search for candidates
 				.workflow-row.left.color-3
 					.workflow-item
 						.ball
 						.arrow
-						.text Search the internal team and the market for the right candidate 
+						.text Conduct recruitment process to check candidates’ personal skills and language proficiency
+				.workflow-row.left.color-3
+					.workflow-item
+						.ball
+						.arrow
+						.text Conduct technical interviews
 				.workflow-row.left.color-4
 					.workflow-item
 						.ball
 						.arrow
-						.text HR-team interviews to check personal skills and level of English
+						.text Suggest candidates and schedule an interview with your team
+				.workflow-row.right.color-5
+					.workflow-item
+						.ball
+						.arrow
+						.text Evaluate and approve team
 				.workflow-row.left.color-5
 					.workflow-item
 						.ball
 						.arrow
-						.text Our best technical professionals interviews to check development skills 
+						.text Provide workspace, facilities and technical equipment
 				.workflow-row.right.color-6
 					.workflow-item
 						.ball
 						.arrow
-						.text Chat and make final decision
+						.text Assign project tasks
 				.workflow-row.left.color-7
 					.workflow-item
 						.ball
 						.arrow
-						.text We set up start of the work and provide office space and technical equipment 
-				.workflow-row.left.color-8
+						.text Take care of daily administrative things 
+				.workflow-row.right.color-8
 					.workflow-item
 						.ball
 						.arrow
-						.text We deal with all every-day issues and questions with your team-member
+						.text Renew the contract
 
 		section#result
 			h1.title.dark Result
