--- a/services/relocation/index.jade
+++ b/services/relocation/index.jade
@@ -24,7 +24,7 @@ html(lang="en")
 				.service-image.relocation
 				h1.title.dark Developer for relocation
 
-				h2.sub-title We tend to think that model of Decimated Development Team is one of the winning ones for the company which works on development of its own product and needs high-quality resources with good efficiency level at the same time with optimised budget. With this model you will have your dedicated employee or team, who works liked any other of your team members only remotely. This way you don’t have to take care of any organisational details like HR, office, technical equipment, but you receive the same result as from onsite team. 
+				h2.sub-title The cost-benefit service that allows you to access a richer pool of IT experts and leverage your human capital. When the top talents for your industry are above your budget or simply not located in your area we will provide you with high-skilled candidates that are willing to relocate to your place.
 
 				h2.sub-title.result You do 5%, we do rest 95% for you. 
 
@@ -38,16 +38,16 @@ html(lang="en")
 			.container
 				h1.title You do
 				ul.customer-workflow
-					li.color-1 Provide Technical Requirements for candidate 
-					li.color-2 Chat and make final decision
+					li.color-1 Provide technical requirements for candidates
+					li.color-2 Evaluate and approve candidates
+					li.color-3 Sign contract with candidates
 				h1.title We do
 				ul.uneed-workflow
-					li.color-3 Search the internal team and the market for the right candidate 
-					li.color-4 HR-team interviews to check personal skills and level of English
-					li.color-5 Our best technical professionals interviews to check development skills 
-					li.color-6 Arrange the meeting with you and your team 
-					li.color-7 We set up start of the work and provide office space and technical equipment 
-					li.color-8 We deal with all every-day issues and questions with your team-member
+					li.color-4 Search for IT experts
+					li.color-5 Conduct recruitment process to check candidates’ personal skills and language proficiency
+					li.color-6 Conduct technical interview
+					li.color-7 Suggest candidates and schedule an interview with your team
+					li.color-8 Handle relocation and settlement
 
 		section#workflow.desktop
 			.container
@@ -58,46 +58,46 @@ html(lang="en")
 					.workflow-item
 						.ball
 						.arrow
-						.text Provide Technical Requirements for candidate 
+						.text Provide technical requirements for candidates
 				.workflow-row.left.color-2
 					.workflow-item
 						.ball
 						.arrow
-						.text Search the internal team and the market for the right candidate 
+						.text Search for IT experts
 				.workflow-row.left.color-3
 					.workflow-item
 						.ball
 						.arrow
-						.text Search the internal team and the market for the right candidate 
+						.text Conduct recruitment process to check candidates’ personal skills and language proficiency
 				.workflow-row.left.color-4
 					.workflow-item
 						.ball
 						.arrow
-						.text HR-team interviews to check personal skills and level of English
+						.text Conduct technical interview
 				.workflow-row.left.color-5
 					.workflow-item
 						.ball
 						.arrow
-						.text Our best technical professionals interviews to check development skills 
+						.text Suggest candidates and schedule an interview with your team
 				.workflow-row.right.color-6
 					.workflow-item
 						.ball
 						.arrow
-						.text Chat and make final decision
+						.text Evaluate and approve candidates
 				.workflow-row.left.color-7
 					.workflow-item
 						.ball
 						.arrow
-						.text We set up start of the work and provide office space and technical equipment 
-				.workflow-row.left.color-8
+						.text Handle relocation and settlement
+				.workflow-row.right.color-8
 					.workflow-item
 						.ball
 						.arrow
-						.text We deal with all every-day issues and questions with your team-member
+						.text Sign contract with candidates
 
 		section#result
 			h1.title.dark Result
-			h2.sub-title You get well-qualified team member, clean and robust code and successfully implemented product
+			h2.sub-title You get a new, high-skilled team member that completes your business team.
 
 			a(href="/contact-us")
 				button(role="button")
